docs/3.x/tracking-api-clients.md
---
category: Integrate
---
# Tracking API Clients

## About this guide

**Read this guide if**

* you'd like to know **which client libraries are available to use Piwik's Tracking HTTP API from your application**

## JavaScript SDK

If you are building websites, you can use our powerful JavaScript SDK to measure all aspects of your website experience. Learn more: [JavaScript tracking client.](https://developer.piwik.org/guides/tracking-javascript-guide)

## Mobile SDKs

Use the SDKs below for mobile app and product analytics with Matomo.

### iOS SDK

If you are building iOS apps, you can use the Swift PiwikTracker client (or the older Objective-C PiwikTracker) to send tracking data to your Piwik server.

Learn more and download Piwik iOS SDK on Github at [github.com/matomo-org/piwik-sdk-ios](https://github.com/matomo-org/piwik-sdk-ios).

### Android SDK

If you are building Android apps (for Android smartphones, tablets, Fire TVs, etc.), you can use the Android Java client to send tracking data to your Piwik server.

Learn more and download Piwik Android SDK on Github at [github.com/matomo-org/piwik-sdk-android](https://github.com/matomo-org/piwik-sdk-android).

### Appcelerator Titanium Module

If you are building Mobile apps using Appcelerator Titanium, use the Piwik Analytics Module for Titanium to measure how users are navigating and consuming your apps. 

Learn more and download the Piwik Module for Titanium at [github.com/manumaticx/ti.piwik](https://github.com/manumaticx/ti.piwik).

## Client libraries for Apps or Server-Side tracking

Use the clients below for server-side analytics and app tracking with Matomo.

### PHP client

Learn more about our Piwik Tracking API PHP client on Github: [github.com/matomo-org/piwik-php-tracker](https://github.com/matomo-org/piwik-php-tracker).

### Java client

A Java client for the Piwik Tracking API is available on Github: [github.com/matomo-org/piwik-java-tracker](https://github.com/matomo-org/piwik-java-tracker#readme).

### C# client

A C# client implementation of the Tracking API is available on Github at [github.com/matomo-org/piwik-dotnet-tracker](https://github.com/matomo-org/piwik-dotnet-tracker#piwik-c-tracking-api).

### Other clients

Other community contributed clients are also available in C++, Python, Node.js, JavaScript Frameworks (AngularJS, Vue.js, React, React native...). [See all integrations with Matomo](https://matomo.org/integrate/#programming-language-platforms-and-frameworks). Please let us know if you hear about (or create!) a new SDK in your favorite technology!
